fix crosshair for dark mode

--- a/html/bootstrap.custom.dark.css
+++ b/html/bootstrap.custom.dark.css
@@ -14,3 +14,19 @@
 #footer {
     background-color: #c8c8c8;
 }
+
+.vt {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  background: #c8c8c8;
+}
+
+.hl {
+  position: absolute;
+  height: 1px;
+  left: 0;
+  right: 0;
+  background: #c8c8c8;
+}
